<resources>
    <string name="app_name">WOCO</string>
    <string name="create_rm_btn">Create Room</string>
    <string name="join_rm_btn">Join Room</string>
    <string name="congrats_title">CONGRATULATIONS!</string>
    <string name="congrats_msg1">Each group member has finished one of their goals!</string>
    <string name="congrats_msg2">Your group has completed 50% of your total goals!</string>
    <string name="congrats_msg3">Your group has completed 100% of your total goals!</string>
    <string name="congrats_msg4">That\'s something to be proud of! Keep up the great work!</string>
    <string name="congrats_msg5">That\'s something to be proud of! You can still add more goals if
        you want, or you can wrap up the session and leave the room. Great work!</string>
    <string name="dismiss">back home</string>
    <string name="incoming_msg1">[insert user] has a message!</string>
    <string name="incoming_msg2">[insert msg]</string>
    <string name="timer_up1">Time Goal Completed!</string>
    <string name="timer_up2">Take a break!</string>
    <string name="timer_title">Set Group Timer</string>
    <string name="time_dig0">0</string>
    <string name="time_dig1">1</string>
    <string name="time_dig2">2</string>
    <string name="time_dig3">3</string>
    <string name="time_dig4">4</string>
    <string name="time_dig5">5</string>
    <string name="time_dig6">6</string>
    <string name="time_dig7">7</string>
    <string name="time_dig8">8</string>
    <string name="time_dig9">9</string>
    <string name="colon">:</string>
    <string name="timer_button">SET</string>
    <string name="enter_rm_btn">Enter Room</string>
    <string name="message_prompt">MESSAGE</string>
    <string name="goal1">goal1</string>
    <string name="goal2">goal2</string>
    <string name="goal3">goal3</string>
    <string name="mygoals">My Goals</string>
    <string name="msgtextprompt">Feel free to attach a short note with your ping!</string>
    <string name="msgsendprompt">Send</string>
    <string name="usermsg">[insert user msg]</string>
    <string name="newcodetxt">generate</string>
    <string name="newcodedesc">Press the button below to generate a code to host a private study room!</string>
    <string name="sampleroomcode">000000</string>
    <string name="entercodeprompt">Please enter your room code:</string>
    <string name="my_goals">MY GOALS</string>
    <string name="user2_goals">USER 2\apos;s GOALS</string>
    <string name="share_rm">USER 3\apos;s GOALS</string>
    <string name="user3_goals">USER 3\apos;s GOALS</string>
    <string name="enter_ans">Enter your answer to the prompts</string>
    <string name="add">ADD</string>
    <string name="add_symb">Add Symbol</string>
    <string name="add_goal">ADD A GOAL</string>
    <string name="text_goal">Goal needed to be accomplished</string>
    <string name="text_user_name">Name of user who needs to complete the goal</string>
</resources>